--- a/languages/genesis-sample.pot
+++ b/languages/genesis-sample.pot
@@ -2,8 +2,8 @@
 # This file is distributed under the GPL-2.0-or-later.=!>
 msgid ""
 msgstr ""
-"Project-Id-Version: Visual Voyager 3.3.1\n"
-"Report-Msgid-Bugs-To: StudioPress <translations@studiopress.com>\n"
+"Project-Id-Version: Visual Voyager 1.0.0\n"
+"Report-Msgid-Bugs-To: HelloTham <info@hellotham.com>\n"
 "POT-Creation-Date: 2020-08-14 15:48:27+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -166,11 +166,11 @@ msgid "https://visualvoyager.net"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "This is the sample theme created for the Genesis Framework."
+msgid "Visual Voyager WordPress Genesis Child theme, based on Genesis Sample."
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "StudioPress"
+msgid "HelloTham"
 msgstr ""
 
 #. Author URI of the plugin/theme
