--- a/languages/visual-voyager.pot
+++ b/languages/visual-voyager.pot
@@ -1,10 +1,10 @@
-# <!=Copyright (C) 2020 StudioPress
+# <!=Copyright (C) 2020 HelloTham
 # This file is distributed under the GPL-2.0-or-later.=!>
 msgid ""
 msgstr ""
 "Project-Id-Version: Visual Voyager 1.0.0\n"
-"Report-Msgid-Bugs-To: HelloTham <info@hellotham.com>\n"
-"POT-Creation-Date: 2020-08-14 15:48:27+00:00\n"
+"Report-Msgid-Bugs-To: StudioPress <translations@studiopress.com>\n"
+"POT-Creation-Date: 2020-09-10 00:42:15+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -179,4 +179,8 @@ msgstr ""
 
 #. Template Name of the plugin/theme
 msgid "Landing"
+msgstr ""
+
+#. Template Name of the plugin/theme
+msgid "Full Width"
 msgstr ""
